Adds new model attribute requirements to controllers.